<resources>
    <string name="app_name">AplicationTesting</string>
    <string name="auth_button_login">Ingresar</string>
    <string name="auth_button_register">Registrar</string>
    <string name="auth_hint_password">contraseña</string>
    <string name="auth_hint_email">correo electrónico</string>
    <string name="main_message_welcome">Bienvenido</string>
    <string name="main_button_sing_out">Cerrar sesión</string>


    <!--    CALCULATOR-->
    <string name="calc_btn_point">.</string>
    <string name="calc_btn_zero">0</string>
    <string name="calc_btn_resolve">=</string>
    <string name="calc_btn_one">1</string>
    <string name="calc_btn_two">2</string>
    <string name="calc_btn_three">3</string>
    <string name="calc_btn_sum">+</string>
    <string name="calc_btn_four">4</string>
    <string name="calc_btn_five">5</string>
    <string name="calc_btn_six">6</string>
    <string name="calc_btn_sub">-</string>
    <string name="calc_btn_seven">7</string>
    <string name="calc_btn_eight">8</string>
    <string name="calc_btn_nine">9</string>
    <string name="calc_btn_multi">x</string>
    <string name="calc_btn_clear">CLEAR</string>
    <string name="calc_btn_div">÷</string>
    <string name="message_exp_incorrect">La expresión es incorrecta.</string>
    <string name="message_num_incorrect">Revise sus números</string>
</resources>